tests/errors/001-unknown-characters.e
~
¬
{
    "code": "0100",
    "message": "Unexpected character '~'",
    "source_file": "tests/errors/001-unknown-characters.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 1,
            "message": "Unexpected character '~'"
        }
    ],
    "notes": [],
    "help": [
        "Review the input near the failing character."
    ]
}
¬
21n
¬
{
    "code": "0103",
    "message": "Invalid character 'n' in number literal",
    "source_file": "tests/errors/001-unknown-characters.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character 'n' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
